<resources>
    <string name="app_name">NewYorkTimes News</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter search query</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>

    <string name="settings_title">Filter Search Results</string>
    <string name="search_query_title">Query: </string>
    <string name="search_filter_title">Filter: </string>

    <string name="begin_date_title">Begin Date</string>
    <string name="date_hint">Click to set date...</string>
    <string name="num_results">Hits: </string>

    <!--test-->
    <string name="begin_date">Begin Date</string>
    <string name="select_date">Select Date</string>
    <string name="sort_order">Sort Order</string>

    <string name="news_desk_title">News Desk Topics</string>
    <string name="chk_arts">Arts</string>
    <string name="chk_fashion_and_style">Fashion &amp; Style</string>
    <string name="chk_sports">Sports</string>

    <string name="sort_order_tile">Sort Order</string>
    <string name="sort_order_prompt">Choose a sort order</string>
    <string-array name="sort_order_options">
        <item>Default</item>
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>
</resources>
